// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CTooltip customize 1`] = `
<div>
  <a
    class="link"
  >
    Test
  </a>
</div>
`;

exports[`loads and displays CTooltip component 1`] = `
<div>
  <a
    class=""
  >
    Test
  </a>
</div>
`;
